-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.0-rc1
-
None
-
Kubuntu 24.04, X11.
-
-
2087b4322 (master)
When typing a function call where one of the arguments is a lambda function, QtCreator does not remove the auto-completion suggestion about the enclosing function parameters even when the cursor is within the lambda body.
See the attached screencast where I'm typing `std::thread` with an inline lambda.
The stale auto-completion suggestion is useless within the lambda body and interferes with code navigation as it intercepts arrow key presses. I think, it should be cleared even earlier, when the square bracket for the lambda capture is opened, as this creates a separate context for captures.