Close existing function hints

... upon entering a lambda context.
The hint of the surrounding call is not applicable in the lambda body or
its parameters.

Fixes: QTCREATORBUG-33048
Change-Id: Ie65479fb417c0babccad0533f421fed36ab3eaea
Reviewed-by: David Schulz <david.schulz@qt.io>